# scott-tracy

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  LICENSE  Makefile  README.md  main.py  main.tf  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  variables.tf
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build-docker-image.yml
docs/: getting-started.md  mkdocs.yml
docs/docs/: index.md
notebooks/: dummy.ipynb
reports/: dummy_report.aux  dummy_report.tex  sidekick.tex
src/helheim/: __init__.py  config.py  dataset.py  dummy_helper.py  features.py  plots.py
src/helheim/helpers/: file_finder_service.py
src/helheim/modeling/: predict.py  train.py
src/scott_tracy/: __init__.py  config.py
tests/: dummy_helper_test.py
tests/helpers/: __init__.py  file_finder_service_test.py
