[project]
name = "helheim"
version = "0.1.0"
description = "The realm of the dead where those who die a dishonorable death are forced to remain."
authors = [{ name = "Earth Rover Program" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "ipympl",
    "matplotlib",
    "numpy",
    "debugpy",
    "matplotlib",
    "mkdocs",
    "pytest",
    "sourcery.sourcery",
]
[project.urls]
repository = "https://github.com/earthroverprogram/helheim"

[tool.sourcery]
ignore = [".env", ".venv", ".vscode"]
rule_settings = { enable = [
    "default",
    "gpsg",
], disable = [
    "dont-import-test-modules",
], rule_types = [
    "refactoring",
    "suggestion",
    "comment",
] }
python_version = "3.12"
clone_detection = { min_lines = 3, min_duplicates = 2, identical_clones_only = false }
